Fix edit/delete button functionality for Heroku deployment
- Create shared edit-delete-functions.js to make functions globally available
- Remove duplicate functions from dashboard.html to avoid conflicts
- Include new JS file in base.html for all pages
- Collect static files for deployment

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,8 @@
     <script src="{% static 'js/form_validation.js' %}" defer></script>
     <!-- Mobile Menu JS -->
     <script src="{% static 'js/mobile_menu.js' %}" defer></script>
+    <!-- Edit/Delete Functions JS -->
+    <script src="{% static 'js/edit-delete-functions.js' %}" defer></script>
     {% block extra_head %}{% endblock %}
 </head>
 
